<resources>
    <string name="app_name">Dorc</string>
    <string name="spell_btn">Button for choosing spells</string>
    <string name="talent_btn">Button for choosing talents</string>
    <string name="backpack_btn">Button for seeing resources</string>
    <string name="profile_btn">Button for seeing currently equipped gear</string>
    <string name="mage_btn">Button for choosing orc mage as current opponent</string>
    <string name="warrior_btn">Button for choosing orc warrior as current opponent</string>
    <string name="rogue_btn">Button for choosing orc rogue as current opponent</string>
    <string name="gold_icon">Image icon for gold icons</string>
    <string name="player_gold">Number for players current amount of gold coins</string>
    <string name="orc_health_bar">Health bar for current orc opponent</string>
    <string name="placeholder_gold_image">Placeholder for gold icon</string>
    <string name="player_weapon_btn">ImageButton for player weapon</string>
    <string name="player_helmet_btn">ImageButton for player helmet</string>
    <string name="player_chest_btn">ImageButton for player chestpiece</string>
    <string name="player_offhand_btn">ImageButton for player offhand</string>
    <string name="gear_image_dispaly">ImageView for displaying gear on item display fragments</string>
    <string name="item_display_container">LinearLayout, container for item display fragments</string>
    <string name="exit_item_display">X</string>
    <string name="item_name_placeholder">Item Name</string>
    <string name="item_rarity_placeholder">Item Rarity</string>
    <string name="item_damage_placeholder">Item Damage</string>
    <string name="legendary_rarity"><font fgcolor="#d96200">LEGENDARY</font></string>
    <string name="epic_rarity"><font fgcolor="#6a1883">EPIC</font></string>
    <string name="rare_rarity"><font fgcolor="#005db0">RARE</font></string>
    <string name="common_rarity"><font fgcolor="#30000000">COMMON</font></string>
    <string name="EQUIP_btn">EQUIP</string>
    <string name="sell_btn">SELL</string>
    <string name="upgrade_btn">UPGRADE</string>
    <string name="equipped_c">Equipped Chestpiece!</string>
    <string name="equipped_h">Equipped Headgear!</string>
    <string name="equipped_w">Equipped Weapon!</string>
    <string name="equipped_o">Equipped Off-hand!</string>
    <string name="equipped_i">Equipped Item!</string>
    <string name="swapped_i">Swapped Item!</string>
    <string name="dmg_text">Text for displaying damage</string>
    <string name="final_blow">FINAL BLOW!</string>
    <string name="sell_all_button">SELL ALL</string>
    <string name="lvl_text_view_string">Lvl.</string>
    <string name="lvl_text_view_description">Text view for displaying players current level</string>
    <string name="boots_shop">BOOTS</string>
    <string name="chest_shop">CHEST</string>
    <string name="helmet_shop">HELMET</string>
    <string name="upgrade_headline">Upgradable Properties:</string>
    <string name="damage_upgrade_text">Damage</string>
</resources>
