<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:id="@+id/tabLayoutParent"
                                             android:background="@color/design_default_color_primary">

    <android.support.design.widget.TabLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideline22" app:layout_constraintStart_toStartOf="@+id/guideline20"
            app:layout_constraintEnd_toStartOf="@+id/guideline23"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline24" android:id="@+id/shopTabLayout"
            app:tabBackground="@android:color/background_dark" app:tabTextColor="@android:color/darker_gray"
            app:tabSelectedTextColor="@android:color/background_light"
            app:tabIndicatorColor="@android:color/background_light">

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boots_shop" android:id="@+id/bootsTab"/>

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chest_shop" android:id="@+id/chestTab"/>

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helmet_shop" android:id="@+id/helmetTab"/>
    </android.support.design.widget.TabLayout>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline20" app:layout_constraintGuide_percent="0.0"
                                          android:orientation="vertical"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline23" app:layout_constraintGuide_percent="1"
                                          android:orientation="vertical"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline22" app:layout_constraintGuide_percent="0.0"
                                          android:orientation="horizontal"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline24" app:layout_constraintGuide_percent="0.1"
                                          android:orientation="horizontal"/>
</android.support.constraint.ConstraintLayout>