<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="#99000000"
                                             android:clickable="true"
                                             android:focusable="true" android:id="@+id/itemDisplayParent"
>

    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/itemDisplayChild" android:background="@color/design_default_color_primary"
            android:clickable="true" android:focusable="true">

        <ImageView
                app:layout_constraintDimensionRatio=""
                android:layout_width="0dp"
                android:layout_height="0dp" app:srcCompat="@drawable/fillerimginv"
                android:id="@+id/itemToDisplay"
                android:scaleType="centerInside"
                android:contentDescription="@string/gear_image_dispaly"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintBottom_toTopOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="@+id/guideline113"
                app:layout_constraintStart_toStartOf="@+id/guideline5"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/exitItemDisplay"
                android:text="@string/exit_item_display"
                android:background="@drawable/imageborder"
                app:layout_constraintTop_toTopOf="@+id/guideline10"
                app:layout_constraintEnd_toStartOf="@+id/guideline14"
                app:layout_constraintStart_toStartOf="@+id/guideline13"
                app:layout_constraintBottom_toTopOf="@+id/guideline113"
                android:layout_marginTop="8dp" android:layout_marginBottom="8dp"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline8"
                app:layout_constraintGuide_percent="0.75"
                android:orientation="vertical"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline11"
                app:layout_constraintGuide_percent="0.05"
                android:orientation="vertical"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline5"
                app:layout_constraintGuide_percent="0.25"
                android:orientation="vertical"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline13"
                app:layout_constraintGuide_percent="0.85"
                android:orientation="vertical"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                app:layout_constraintGuide_percent="0.80"
                android:orientation="vertical"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline6"
                app:layout_constraintGuide_percent="0.20"
                android:orientation="vertical"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline14"
                app:layout_constraintGuide_percent="0.95"
                android:orientation="vertical"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline9"
                app:layout_constraintGuide_percent="0.4"
                android:orientation="horizontal"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline10"
                app:layout_constraintGuide_percent="0.0"
                android:orientation="horizontal"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline113"
                app:layout_constraintGuide_percent="0.10"
                android:orientation="horizontal"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline15"
                app:layout_constraintGuide_percent="0.80"
                android:orientation="horizontal"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline2"
                app:layout_constraintGuide_percent="0.55"
                android:orientation="horizontal"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline3"
                app:layout_constraintGuide_percent="0.675"
                android:orientation="horizontal"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline4"
                app:layout_constraintGuide_percent="0.80"
                android:orientation="horizontal"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/item_name_placeholder"
                android:autoSizeTextType="uniform"
                android:ems="10"
                android:id="@+id/itemName"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline11"
                app:layout_constraintTop_toTopOf="@+id/guideline9"
                app:layout_constraintEnd_toStartOf="@+id/guideline13" android:clickable="false"/>
        <TextView
                android:autoSizeTextType="uniform"
                android:text="@string/item_rarity_placeholder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/itemRarity"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                app:layout_constraintBottom_toTopOf="@+id/guideline3" app:layout_constraintEnd_toEndOf="@+id/itemName"
                app:layout_constraintStart_toEndOf="@+id/guideline11" android:layout_marginStart="10dp"/>
        <TextView
                android:autoSizeTextType="uniform"
                android:text="@string/item_damage_placeholder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/itemDamage"
                app:layout_constraintTop_toTopOf="@+id/guideline3"
                app:layout_constraintBottom_toTopOf="@+id/guideline4" app:layout_constraintEnd_toEndOf="@+id/itemName"
                app:layout_constraintStart_toStartOf="@+id/guideline11" android:layout_marginStart="10dp"/>
        <Button
                android:text="@string/EQUIP_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/equipBtn" app:layout_constraintEnd_toStartOf="@+id/sellBtn"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline6"
                android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="@+id/guideline4"
                android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="16dp" android:textStyle="bold" android:typeface="normal"
                style="@android:style/Widget.Holo.Button"
                tools:targetApi="m"/>
        <Button
                android:text="@string/sell_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sellBtn" app:layout_constraintEnd_toStartOf="@+id/guideline13"
                android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="@+id/guideline4"
                android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/equipBtn" android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp" style="@android:style/Widget.Holo.Button"
                android:textStyle="bold"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>