<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="#99000000"
                                             android:clickable="true"
                                             android:focusable="true" android:id="@+id/parentViewEq">

    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="32dp" android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp" android:layout_marginBottom="32dp" android:id="@+id/upgrade_item_container">

    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp" android:layout_marginEnd="2dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="2dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="80dp"
            android:clickable="true" android:focusable="true" android:focusableInTouchMode="true"
            android:id="@+id/childViewEq" android:background="@color/colorPrimaryDark">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/lvlTextView"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btnPlayerChest" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                android:contentDescription="@string/lvl_text_view_description" android:textStyle="bold"/>
        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/guideline12" app:layout_constraintGuide_percent="0.33"
                                              android:orientation="horizontal"/>
        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/guideline25" app:layout_constraintGuide_percent="0.99"
                                              android:orientation="horizontal"/>
        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/guideline16" app:layout_constraintGuide_percent="0.66"
                                              android:orientation="horizontal"/>
        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/guideline17" app:layout_constraintGuide_percent="0.0"
                                              android:orientation="horizontal"/>
        <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/btnPlayerWeapon"
                android:scaleType="centerInside" android:background="@drawable/imageborder"
                app:layout_constraintEnd_toStartOf="@+id/guideline18"
                android:contentDescription="@string/player_weapon_btn"
                app:layout_constraintTop_toTopOf="@+id/guideline12"
                app:layout_constraintBottom_toTopOf="@+id/guideline16"
                app:layout_constraintStart_toStartOf="@+id/guideline21"/>
        <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/btnPlayerChest"
                android:scaleType="centerInside" android:background="@drawable/imageborder"
                app:layout_constraintStart_toEndOf="@+id/btnPlayerWeapon"
                app:layout_constraintEnd_toStartOf="@+id/btnPlayerOffh"
                android:contentDescription="@string/player_chest_btn"
                app:layout_constraintTop_toBottomOf="@+id/btnPlayerHead"
                app:layout_constraintBottom_toTopOf="@+id/guideline16"/>
        <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/btnPlayerHead"
                android:scaleType="centerInside" android:background="@drawable/imageborder"
                android:contentDescription="@string/player_helmet_btn"
                app:layout_constraintBottom_toTopOf="@+id/guideline12"
                app:layout_constraintTop_toTopOf="@+id/guideline17"
                app:layout_constraintStart_toStartOf="@+id/guideline18"
                app:layout_constraintEnd_toStartOf="@+id/guideline19"/>
        <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/btnPlayerOffh"
                android:scaleType="centerInside" android:background="@drawable/imageborder"
                app:layout_constraintStart_toEndOf="@+id/btnPlayerChest"
                android:contentDescription="@string/player_offhand_btn"
                app:layout_constraintTop_toTopOf="@+id/guideline12"
                app:layout_constraintBottom_toTopOf="@+id/guideline16"
                app:layout_constraintEnd_toEndOf="parent"/>
        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/guideline18"
                                              android:orientation="vertical"
                                              app:layout_constraintGuide_percent="0.33146068"/>
        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/guideline19"
                                              android:orientation="vertical"
                                              app:layout_constraintGuide_percent="0.6601124"/>
        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/guideline21"
                                              android:orientation="vertical"
                                              app:layout_constraintGuide_percent="0.0"/>
        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarExp" android:layout_weight="1"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btnPlayerChest"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline19" android:max="100"
                android:progress="100" android:progressDrawable="@drawable/progress_bar_exp"
                app:layout_constraintStart_toEndOf="@+id/lvlTextView" android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/itemDisplayContainer"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toTopOf="@+id/childViewEq"
            app:layout_constraintBottom_toBottomOf="@+id/childViewEq"
            app:layout_constraintEnd_toEndOf="@+id/childViewEq" app:layout_constraintStart_toStartOf="@+id/childViewEq"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0">
    </LinearLayout>
</android.support.constraint.ConstraintLayout>